Merge from trunk (not tested yet)
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-1.0.x@372929 13f79535-47bb-0310-9956-ffa450edef68